fixed: bug in overflow

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -21,3 +21,10 @@
       overflow-x: scroll;
    }
 }
+
+
+@media only screen and (min-width: 992px) {
+   .cards-container {
+      overflow-x: hidden;
+   }
+}
